<resources>
    <string name="app_name">Homework</string>
    <string name="title_activity_1">Activity1</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="homework_25">Homework 25%</string>
    <string name="quizes_15">Quizes 15%</string>
    <string name="mid_terms_30">Mid terms 30%</string>
    <string name="final_30">Final 30%</string>
    <string name="check_this">Check this</string>
    <string name="calculat_it">Calculat it !!</string>
    <string name="grade_calculator">Grade Calculator!!</string>
</resources>